objects/tffa__AddOnServiceMatrix__c.object
<CustomObject>
    <description>Represents business rules for resolving add-on service checklists. An add-on service checklist represents a group of additional services offered by the bank. These could be specific to a product category or it could be very specific to a product.</description>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled state and checklist active state.</description>
        <formula>tffa__Disabled__c = False &amp;&amp; tffa__Checklist__r.tffa__Active__c = True</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__BrandCodeSet__c</fullName>
        <description>Unique code of brands servicing the submission. A fact. Supports multiple values (semicolon separated begin and end)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual values with semicolon ;123;</inlineHelpText>
        <label>Brand code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__BundleCodeSet__c</fullName>
        <description>Unique product bundle code maintained in the system as a fact. Supports multiple values (semicolon separated)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual values with semicolon ;BUNDLECHECKING;</inlineHelpText>
        <label>Bundle code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ChannelSet__c</fullName>
        <description>The channel via which the application was started. Supports multiple. A fact.</description>
        <label>Channel (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionChannelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Checklist__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The applicable checklist. An outcome.</description>
        <label>Checklist (outcome)</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Checklist must be active.</errorMessage>
            <filterItems>
                <field>tffa__AddOnServiceChecklist__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__AddOnServiceChecklist__c</referenceTo>
        <relationshipLabel>Matrices</relationshipLabel>
        <relationshipName>Matrices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Explains the rule, giving some context about why the rule conditions (facts) lead to the rule action (outcome).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the configuration as unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EntityType__c</fullName>
        <defaultValue>&quot;APPLICATION&quot;</defaultValue>
        <description>Type of entity for which the checklist is maintained. e.g. PARTY, APPLICATION</description>
        <label>Entity type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__EntityType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OrganizationTypeSet__c</fullName>
        <description>Organization type of associated party. Supports multiple values. A fact.</description>
        <label>Organization Type (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__OrganizationType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PartyRole__c</fullName>
        <description>The role played by the party in the bank - CUSTOMER, PROSPECT. Represents a fact.</description>
        <label>Party role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyRole</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PartyType__c</fullName>
        <description>Type of Party as a fact.</description>
        <label>Party type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ProductCategorySet__c</fullName>
        <description>Product category of associated application. A fact. Supports multiple values.</description>
        <label>Product category (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ProductCodeSet__c</fullName>
        <description>The product code of the application. Supports multiple (semicolon separated). A fact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual value in semicolons e.g. ;P-01;P-02;</inlineHelpText>
        <label>Product code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ProductType__c</fullName>
        <description>Product Type as a fact</description>
        <label>Product type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Defines the relative order of records.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Add On Service Matrix</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__SortOrder__c</columns>
        <columns>tffa__EntityType__c</columns>
        <columns>tffa__BrandCodeSet__c</columns>
        <columns>tffa__BundleCodeSet__c</columns>
        <columns>tffa__ChannelSet__c</columns>
        <columns>tffa__OrganizationTypeSet__c</columns>
        <columns>tffa__PartyRole__c</columns>
        <columns>tffa__PartyType__c</columns>
        <columns>tffa__ProductCategorySet__c</columns>
        <columns>tffa__ProductCodeSet__c</columns>
        <columns>tffa__ProductType__c</columns>
        <columns>tffa__Checklist__c</columns>
        <columns>tffa__Disabled__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AOSM-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Add On Service Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>